--- a/src/Weather.css
+++ b/src/Weather.css
@@ -2,17 +2,11 @@
   font-family: arial, sans-serif;
   border: 1px solid #dadde1;
   padding: 16px;
-  margin: 30px auto;
-  max-width: 600px;
+  border-radius: 4px;
   color: rgb(135, 135, 135);
 }
 
-.Weather form {
-  margin-bottom: 20px;
-}
-
 .Weather h1 {
-  color: #878787;
   font-size: 24px;
   font-weight: 100;
   margin: 20px 0 0 0;
@@ -31,19 +25,18 @@
   list-style: none;
 }
 
-.Weather img {
-  height: 64px;
-  width: 64px;
-  margin-right: 10px;
-  display: inline-block;
-}
-
 .Weather .temperature {
   font-weight: bold;
   color: rgb(33, 33, 33);
   font-size: 64px;
   line-height: 64px;
+  margin-left: 5px;
   font-weight: 400;
+  margin-left: 10px;
+}
+
+.Weather canvas {
+  margin: 10px auto;
 }
 
 .Weather .unit {
@@ -53,5 +46,4 @@
   position: relative;
   line-height: 1;
   top: -34px;
-  margin-left: 5px;
 }
